# rdk-ttsengine

./: CMakeLists.txt  CONTRIBUTING.md  Makefile
common/: TTSErrors.h  glib_utils.cpp  glib_utils.h  logger.cpp  rt_msg_dispatcher.cpp  rt_msg_dispatcher.h
docs/: tts.ini
test/: CMakeLists.txt  TTSAPITest.cpp  TTSMultiClientTest.cpp  TTSTestClient.cpp
ttsclient/: CMakeLists.txt  Service.cpp  Service.h  TTSClient.cpp  TTSClient.h  TTSClientPrivate.cpp  TTSClientPrivate.h  TTSClientPrivateInterface.h  TTSClientPrivateJsonRPC.cpp  TTSClientPrivateJsonRPC.h  TTSClientPrivateRtRemote.cpp  TTSClientPrivateRtRemote.h  TextToSpeechService.cpp  TextToSpeechService.h
ttsengine/: CMakeLists.txt  TTSEngine.cpp  TTSEventSource.cpp  TTSEventSource.h  TTSManager.cpp  TTSManager.h  TTSSession.cpp  TTSSession.h  TTSSpeaker.cpp  TTSSpeaker.h  launch_ttsengine.sh
